Added: Team layouts, event page..blah...blah...blah

--- a/products.html
+++ b/products.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
-		<script src="assets/js/jquery.min.js"></script>
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" type="text/css" href="assets/css/animate.css">
+		<link rel="stylesheet" href="assets/css/style.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -15,12 +15,12 @@
 	<body>
 
 					
-		<div class="container">
+	<div class="container">
 		<!-- Main -->
-			<div id="main">
+		<div id="main">
 
 				<!-- Header -->
-				     <nav class="navbar navbar-default">
+		<nav class="navbar navbar-default  wow fadeInDown">
 		  <div class="container-fluid">
 		    <!-- Brand and toggle get grouped for better mobile display -->
 		    <div class="navbar-header">
@@ -37,6 +37,7 @@
 		      <ul class="nav navbar-nav navbar-right">
 		        <li><a href="index.html">Home</a></li>
 				<li><a href="products.html">Products</a></li>
+				<li><a href="events.html">Events</a></li>
 				<li><a href="team.html">Team</a></li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
@@ -127,8 +128,9 @@
 			<script src="assets/js/jquery.min.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+			<script src="assets/js/wow.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="assets/js/init.js"></script>
 
 	</body>
 </html>
