--- a/team.html
+++ b/team.html
@@ -105,9 +105,9 @@
 		    		<div class="team-member">
 		    			<center><img src="assets/images/team/shivbaran.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
-							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://twitter.com/experienceflas1" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/profile/view?id=347472143" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="www.github.com/gitexperience" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					<p class="member-name">Anubhav Singh<br>
 		    		<span>[Web Development Head]</span></p>
@@ -298,8 +298,8 @@
 		    			<center><img src="assets/images/team/shivbaran.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
 							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://in.linkedin.com/in/sakshi-tripathi-953234102" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/sakshi29" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 						<p class="member-name">Sakshi Tripathi<br>
 		    		<span>[Web Development Head]</span></p>
@@ -310,15 +310,16 @@
 		    			<center><img src="assets/images/team/shivbaran.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
 							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://in.linkedin.com/in/sakshi-tripathi-953234102" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/sakshi29" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 						<p class="member-name">Sumit<br>
 		    		<span>[Web Development Head]</span></p>
 		    		</div>
+		    		</div>
 		    		<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 		    		<div class="team-member">
-		    			<center><img src="assets/images/team/shivbaran.jpg" class="img-responsive img-thumbnail"></center>
+		    			<center><img src="assets/images/team/Kanishk.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
 							<li><a href="https://twitter.com/Kani3012?lang=en-in" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://in.linkedin.com/in/kanishk-sharma-79354410a" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -328,14 +329,13 @@
 		    		<span>[Web Development Head]</span></p>
 		    		</div>
 		    	</div>
-		    	</div>
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 		    		<div class="team-member">
 		    			<center><img src="assets/images/team/shivbaran.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
 							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/profile/view?id=402776589" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="http://github.com/rishabh2015" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 						<p class="member-name">Rishabh Jain<br>
 		    		<span>[Web Development Head]</span></p>
@@ -393,9 +393,9 @@
 		    		<div class="team-member">
 		    			<center><img src="assets/images/team/shivbaran.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
-							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://twitter.com/VashisthaAkshay" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/akshay-vashistha-9a558778" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/ajatgd" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 						<p class="member-name">Akshay Vashishth<br>
 		    		<span>[Web Development Head]</span></p>
