the new header design and image added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<h2>Microsoft Mobile Innovation Lab</h2>
 							<p>Inspire Invent Innovate</p>
 						</header>
-						<span class="image"><img src="assets/images/mobile.jpg" alt="" /></span>
+						<!--<span class="image"><img src="assets/images/mobile.jpg" alt="" /></span>-->
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
