added products by mmil

--- a/products.html
+++ b/products.html
@@ -63,54 +63,64 @@
 						</article>
 						
 						<article>
-							<a class="thumbnail" href="assets/images/fulls/03.jpg" data-position="top center"><img src="assets/images/thumbs/03.jpg" alt="" /></a>
-							<h2>Nec accumsan enim felis</h2>
-							<p>Maecenas eleifend tellus ut turpis eleifend, vitae pretium faucibus.</p>
+							<a class="thumbnail" href="assets/images/fulls/03.png" data-position="top center"><img src="assets/images/thumbs/03.jpg" alt="" /></a>
+							<h2>UPTU Syllabus</h2>
+							<p>The application includes semester wise syllabus of all the branches of UPTU. It incorporates all the subjects of B. Tech of all major branches. All efforts has been made to keep application simple and fluid with a beautiful interface.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="assets/images/fulls/04.jpg"><img src="assets/images/thumbs/04.jpg" alt="" /></a>
-							<h2>Donec maximus nisi eget</h2>
-							<p>Tristique in nulla vel congue. Sed sociis natoque parturient nascetur.</p>
+							<h2>My Location</h2>
+							<p>The application includes semester wise syllabus of all the branches of UPTU. It incorporates all the subjects of B. Tech of all major branches. All efforts has been made to keep application simple and fluid with a beautiful interface.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="assets/images/fulls/05.jpg" data-position="top center"><img src="assets/images/thumbs/05.jpg" alt="" /></a>
-							<h2>Nullam vitae nunc vulputate</h2>
-							<p>In pellentesque cursus velit id posuere. Donec vehicula nulla.</p>
+							<h2>My Shortcut</h2>
+							<p>There are plenty of shortcut app in this market, but what makes this app different is the smoothness and the simple yet interactive interface without any advertisement. The application gives quick access to features such as WiFi, Network, Flight Mode, Marketplace, Email, Messaging Service etc. The application is simple, smooth with no ads.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="assets/images/fulls/06.jpg"><img src="assets/images/thumbs/06.jpg" alt="" /></a>
-							<h2>Phasellus magna faucibus</h2>
-							<p>Nulla dignissim libero maximus tellus varius dictum ut posuere magna.</p>
+							<h2>Easy Add contacts v1.0</h2>
+							<p>The application gives facility to quickly add contacts to Phonebook. The first page contains Basic Details followed by Home Details of Contacts and Finally Work Details with a simple quick and nice interface. This app has been provided as a substitute for saving contacts, as we know saving new contacts in Windows Phone requires much navigation, so this app cuts those navigation, presents all details on one page and lets you to save all related information.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="assets/images/fulls/07.jpg"><img src="assets/images/thumbs/07.jpg" alt="" /></a>
-							<h2>Proin quis mauris</h2>
+							<a class="thumbnail" href="assets/images/fulls/07.png"><img src="assets/images/thumbs/07.png" alt="" /></a>
+							<h2>Words Encyclopedia</h2>
 							<p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="assets/images/fulls/08.jpg"><img src="assets/images/thumbs/08.jpg" alt="" /></a>
 							<h2>Gravida quis varius enim</h2>
-							<p>Nunc egestas congue lorem. Nullam dictum placerat ex sapien tortor mattis.</p>
+							<p>This is an awesome all topic reference guide.. The app consists of numerous number of dictionary for different purposes.Each one is capable of explaining the topic of its own interest. Apart from this a basic dictionary 'word-net 2.0' is provided for general purpose The app has nice user interface and its easy to use. Simply tap on select dictionary text-box to use guide of your need.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="assets/images/fulls/09.jpg"><img src="assets/images/thumbs/09.jpg" alt="" /></a>
-							<h2>Morbi eget vitae adipiscing</h2>
-							<p>In quis vulputate dui. Maecenas metus elit, dictum praesent lacinia lacus.</p>
+							<h2>UPTU Results</h2>
+							<p>The application gives facility to quick access UPTU results of both Lucknow and Noida Region. The application has been designed with a smooth and very quick interface. </p>
 						</article>
 						<article>
 							<a class="thumbnail" href="assets/images/fulls/10.jpg"><img src="assets/images/thumbs/10.jpg" alt="" /></a>
-							<h2>Habitant tristique senectus</h2>
-							<p>Vestibulum ante ipsum primis in faucibus orci luctus ac tincidunt dolor.</p>
+							<h2>Micranet web browsert</h2>
+							<p>Micranet Browser for windows phone enhances your browsing experience provides you excellent Searching,Browsing,Video,Shopping and social experience-all in one package with no compromise with speed.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="assets/images/fulls/11.jpg"><img src="assets/images/thumbs/11.jpg" alt="" /></a>
-							<h2>Pharetra ex non faucibus</h2>
-							<p>Ut sed magna euismod leo laoreet congue. Fusce congue enim ultricies.</p>
+							<h2>Mockify Sonido</h2>
+							<p>Prankify your friends and people around you. Surprise them with various Taunt,Warnings,Animals and Cartoons sounds. Play sounds during call to fake background voice on another phone. Mockify Sonido Features- -Contains sounds of Animals,Cartoons,Taunts and Warnings.</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="assets/images/fulls/12.jpg"><img src="assets/images/thumbs/12.jpg" alt="" /></a>
-							<h2>Mattis lorem sodales</h2>
-							<p>Feugiat auctor leo massa, nec vestibulum nisl erat faucibus, rutrum nulla.</p>
+							<h2>Minesweeper</h2>
+							<p>TA simple minesweeper game.</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="assets/images/fulls/13.jpg"><img src="assets/images/thumbs/13.jpg" alt="" /></a>
+							<h2>Sudoku solver</h2>
+							<p>With this Sudoku Solver you can solve all your Sudoku's fast and easily.I you are having trouble with a Sudoku this app comes handy.</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="assets/images/fulls/14.jpg"><img src="assets/images/thumbs/14.jpg" alt="" /></a>
+							<h2>JSS Infocenter</h2>
+							<p>All the Affairs in the JSSATECollege are enlisted in the Application once you login for the same.</p>
 						</article>
 					</section>
 
