--- a/index.html
+++ b/index.html
@@ -67,23 +67,19 @@
 							<div class="row wow fadeInLeft">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>WHO ARE WE?</h2>
+										<!--<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>-->
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>This society was  found in 2013 as JSS Mobile Innovation Lab under Sourabh Verma and Prince Kumar 
+									along with the faculty coordinator Mr.Manoj Kumar. In 2014, name changed to 
+									Microsoft Mobile Innovation Lab. The society organizes the workshops to facilitate learning in the students.
+</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>We believe in saying no to thousands of projects, so that we can really focus on the few that are truly important and meaningful to us.
+									</p>
 								</div>
 							</div>
 						</div>
@@ -96,10 +92,16 @@
 					<span class="image fit main"><img src="assets/images/apps.jpg" alt="" /></span>
 					<div class="content wow fadeInRight">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>WHAT IS OUR VISION?</h2>
+							<!--<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>-->
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>In the past two years we have organised several workshops based on:<br>
+							•	Windows phone<br>
+							•	Java programming<br>
+							•	Android<br>
+							•	C programming<br>
+							We believe that we are on the face of the earth to make great products and that's not changing. We are constantly focusing on innovating. We believe in the simple not the complex.
+						</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
@@ -112,8 +114,8 @@
 					
 					<div class="content wow fadeInLeft">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>WHAT WE DO?</h2>
+							<!--<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>-->
 						</header>
 						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
 						<ul class="actions">
