--- a/products.html
+++ b/products.html
@@ -45,7 +45,7 @@
         </nav>
 					<header id="header2">
 
-						<p id="project-head">Hello, These are some applications developed under mmil</p>
+						<p id="project-head">Hello, These are some applications developed under MMIL</p>
 					</header>
 
 				<!-- Thumbnail -->
