modified: event page and team images

--- a/events.html
+++ b/events.html
@@ -41,9 +41,82 @@
 		</header>
 		<div class="container">
 		<center><h1>EVENTS</h1></center>
-		<center><h3>UPCOMING EVENTS</h3></center>
-		</div>
-		</div>
+		<center><h3>"UPCOMING EVENTS"</h3></center>
+		<center><div class="row">
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+				<div class="event-list">
+					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
+					<p>Event Name</p>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+				<div class="event-list">
+					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
+					<p>Event Name</p>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+				<div class="event-list">
+					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
+					<p>Event Name</p>
+				</div>
+			</div>
+		</div></center>
+        <hr><hr>
+		<center><h3>"PAST EVENTS"</h3></center>
+		<center><div class="row">
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+				<div class="event-list">
+					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
+					<p>Event Name</p>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+				<div class="event-list">
+					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
+					<p>Event Name</p>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+				<div class="event-list">
+					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
+					<p>Event Name</p>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+				<div class="event-list">
+					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
+					<p>Event Name</p>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+				<div class="event-list">
+					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
+					<p>Event Name</p>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+				<div class="event-list">
+					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
+					<p>Event Name</p>
+				</div>
+			</div>
+		</div></center>
+	</div>
+<!-- Footer -->
+				<footer id="footer">
+					<ul class="icons wow shake">
+						<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; All rights reserved.</li><li>Design: <a href="#">Microsoft Mobile Innovation Lab</a></li>
+					</ul>
+				</footer>
+
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
