Updated:Event page

--- a/events.html
+++ b/events.html
@@ -45,60 +45,62 @@
 		<center><div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 				<div class="event-list">
-					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
-					<p>Event Name</p>
+					<img src="assets/images/events/hackathon.jpg" class="img-responsive img-thumbnail">
+					<p>Hackathon</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 				<div class="event-list">
-					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
-					<p>Event Name</p>
+					<img src="assets/images/events/windowsapp.png" class="img-responsive img-thumbnail">
+					<p>Windows App Development</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 				<div class="event-list">
-					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
-					<p>Event Name</p>
+					<img src="assets/images/events/androidapp.png" class="img-responsive img-thumbnail">
+					<p>Android App Development</p>
 				</div>
 			</div>
+			
 		</div></center>
         <hr><hr>
 		<center><h3>"PAST EVENTS"</h3></center>
 		<center><div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 				<div class="event-list">
-					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
-					<p>Event Name</p>
+					<img src="assets/images/events/paradigm.jpg" class="img-responsive img-thumbnail">
+					<p>Programming Paradigm(C/C++)</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 				<div class="event-list">
-					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
-					<p>Event Name</p>
+					<img src="assets/images/events/milop.jpg" class="img-responsive img-thumbnail">
+					<p>Orientation Program</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 				<div class="event-list">
-					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
-					<p>Event Name</p>
+					<img src="assets/images/events/java.jpg" class="img-responsive img-thumbnail">
+					<p>Java Development</p>
+				</div>
+			</div>
+			
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+				<div class="event-list">
+					<img src="assets/images/events/caswar.jpg" class="img-responsive img-thumbnail">
+					<p>Cassopian Wars</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 				<div class="event-list">
-					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
-					<p>Event Name</p>
+					<img src="assets/images/events/compoquiz.jpg" class="img-responsive img-thumbnail">
+					<p> Compoquizicon</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 				<div class="event-list">
-					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
-					<p>Event Name</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-				<div class="event-list">
-					<img src="assets/images/events/event.jpg" class="img-responsive img-thumbnail">
-					<p>Event Name</p>
+					<img src="assets/images/events/winappdevold.png" class="img-responsive img-thumbnail">
+					<p>Windows App Development</p>
 				</div>
 			</div>
 		</div></center>
