added:slider,modified: products, team etc.

--- a/products.html
+++ b/products.html
@@ -55,13 +55,6 @@
 							<h2>SkyNet Browser</h2>
 							<p>It is a fast browsing application that provides several features. It contains an interactive user interface that provides a large number of functions. It provides the quick links to some most visited pages such as Bing, Google,Gmail etc. It also provides an easy mailing capability to the user . There is also an option for the searching on the Bing Maps.</p>
 						</article>
-						
-						<article>
-							<a class="thumbnail" href="assets/images/fulls/02.png"><img src="assets/images/thumbs/02.png" alt="" /></a>
-							<h2>Turbo Search Engine</h2>
-							<p>1.This application is designed for the advance search 2.Search operation performed in a single click.for e.g. if you want to search any media then tap the media format and in the textbox just enter the media name and click on the go. 3.No requirement to Enter long strings to search.It reduce the efforts and also saves the time. 4.Straightly directs you to the main page of the browser. No need to visit the website.</p>
-						</article>
-						
 						<article>
 							<a class="thumbnail" href="assets/images/fulls/03.png" data-position="top center"><img src="assets/images/thumbs/03.jpg" alt="" /></a>
 							<h2>UPTU Syllabus</h2>
@@ -78,29 +71,34 @@
 							<p>There are plenty of shortcut app in this market, but what makes this app different is the smoothness and the simple yet interactive interface without any advertisement. The application gives quick access to features such as WiFi, Network, Flight Mode, Marketplace, Email, Messaging Service etc. The application is simple, smooth with no ads.</p>
 						</article>
 						<article>
+							<a class="thumbnail" href="assets/images/fulls/07.png"><img src="assets/images/thumbs/07.png" alt="" /></a>
+							<h2>Words Encyclopedia</h2>
+							<p>This is an awesome all topic reference guide.. The app consists of numerous number of dictionary for different purposes.Each one is capable of explaining the topic of its own interest. Apart from this a basic dictionary 'word-net 2.0' is provided for general purpose The app has nice user interface and its easy to use. Simply tap on select dictionary text-box to use guide of your need.</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="assets/images/fulls/02.png"><img src="assets/images/thumbs/02.png" alt="" /></a>
+							<h2>Turbo Search Engine</h2>
+							<p>1.This application is designed for the advance search 2.Search operation performed in a single click.for e.g. if you want to search any media then tap the media format and in the textbox just enter the media name and click on the go. 3.No requirement to Enter long strings to search.It reduce the efforts and also saves the time. 4.Straightly directs you to the main page of the browser. No need to visit the website.</p>
+						</article>
+						<article>
 							<a class="thumbnail" href="assets/images/fulls/06.jpg"><img src="assets/images/thumbs/06.jpg" alt="" /></a>
 							<h2>Easy Add contacts v1.0</h2>
 							<p>The application gives facility to quickly add contacts to Phonebook. The first page contains Basic Details followed by Home Details of Contacts and Finally Work Details with a simple quick and nice interface. This app has been provided as a substitute for saving contacts, as we know saving new contacts in Windows Phone requires much navigation, so this app cuts those navigation, presents all details on one page and lets you to save all related information.</p>
 						</article>
 						<article>
-							<a class="thumbnail" href="assets/images/fulls/07.png"><img src="assets/images/thumbs/07.png" alt="" /></a>
-							<h2>Words Encyclopedia</h2>
-							<p>Etiam ultricies, lorem quis efficitur porttitor, facilisis ante orci urna.</p>
-						</article>
-						<article>
 							<a class="thumbnail" href="assets/images/fulls/08.jpg"><img src="assets/images/thumbs/08.jpg" alt="" /></a>
-							<h2>Gravida quis varius enim</h2>
-							<p>This is an awesome all topic reference guide.. The app consists of numerous number of dictionary for different purposes.Each one is capable of explaining the topic of its own interest. Apart from this a basic dictionary 'word-net 2.0' is provided for general purpose The app has nice user interface and its easy to use. Simply tap on select dictionary text-box to use guide of your need.</p>
-						</article>
-						<article>
-							<a class="thumbnail" href="assets/images/fulls/09.jpg"><img src="assets/images/thumbs/09.jpg" alt="" /></a>
 							<h2>UPTU Results</h2>
 							<p>The application gives facility to quick access UPTU results of both Lucknow and Noida Region. The application has been designed with a smooth and very quick interface. </p>
 						</article>
 						<article>
-							<a class="thumbnail" href="assets/images/fulls/10.jpg"><img src="assets/images/thumbs/10.jpg" alt="" /></a>
-							<h2>Micranet web browsert</h2>
+							<a class="thumbnail" href="assets/images/fulls/09.jpg"><img src="assets/images/thumbs/09.jpg" alt="" /></a>
+							<h2>Micranet web browser</h2>
 							<p>Micranet Browser for windows phone enhances your browsing experience provides you excellent Searching,Browsing,Video,Shopping and social experience-all in one package with no compromise with speed.</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="assets/images/fulls/10.jpg"><img src="assets/images/thumbs/10.jpg" alt="" /></a>
+							<h2>Navegar Ultimo</h2>
+							<p></p>
 						</article>
 						<article>
 							<a class="thumbnail" href="assets/images/fulls/11.jpg"><img src="assets/images/thumbs/11.jpg" alt="" /></a>
