--- a/events.html
+++ b/events.html
@@ -40,23 +40,23 @@
 	        </nav>
 		</header>
 		<div class="container">
-		<center><h1>EVENTS</h1></center>
-		<center><h3>"UPCOMING EVENTS"</h3></center>
+		<center><h1 class="wow fadeIn">EVENTS</h1></center>
+		<center><h3 class="wow fadeIn">"UPCOMING EVENTS"</h3></center>
 		<center><div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-				<div class="event-list">
+				<div class="event-list wow fadeInLeft">
 					<img src="assets/images/events/hackathon.jpg" class="img-responsive img-thumbnail">
 					<p>Hackathon</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-				<div class="event-list">
+				<div class="event-list wow fadeInDown">
 					<img src="assets/images/events/windowsapp.png" class="img-responsive img-thumbnail">
 					<p>Windows App Development</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-				<div class="event-list">
+				<div class="event-list wow fadeInRight">
 					<img src="assets/images/events/androidapp.png" class="img-responsive img-thumbnail">
 					<p>Android App Development</p>
 				</div>
@@ -64,41 +64,41 @@
 			
 		</div></center>
         <hr><hr>
-		<center><h3>"PAST EVENTS"</h3></center>
+		<center><h3 class="wow fadeIn">"PAST EVENTS"</h3></center>
 		<center><div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-				<div class="event-list">
+				<div class="event-list wow fadeInLeft">
 					<img src="assets/images/events/paradigm.jpg" class="img-responsive img-thumbnail">
 					<p>Programming Paradigm(C/C++)</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-				<div class="event-list">
+				<div class="event-list wow fadeIn">
 					<img src="assets/images/events/milop.jpg" class="img-responsive img-thumbnail">
 					<p>Orientation Program</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-				<div class="event-list">
+				<div class="event-list wow fadeInRight">
 					<img src="assets/images/events/java.jpg" class="img-responsive img-thumbnail">
 					<p>Java Development</p>
 				</div>
 			</div>
 			
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-				<div class="event-list">
+				<div class="event-list wow fadeInLeft">
 					<img src="assets/images/events/caswar.jpg" class="img-responsive img-thumbnail">
 					<p>Cassopian Wars</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-				<div class="event-list">
+				<div class="event-list wow fadeIn">
 					<img src="assets/images/events/compoquiz.jpg" class="img-responsive img-thumbnail">
 					<p> Compoquizicon</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-				<div class="event-list">
+				<div class="event-list wow fadeInRight">
 					<img src="assets/images/events/winappdevold.png" class="img-responsive img-thumbnail">
 					<p>Windows App Development</p>
 				</div>
