--- a/team.html
+++ b/team.html
@@ -153,7 +153,7 @@
 							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 						<p class="member-name">Akash Chandoke<br>
-		    		<span>[Web Development Head]</span></p>
+		    		<span>[Technical Department]</span></p>
 		    		</div>
 		    	</div>
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
@@ -179,7 +179,7 @@
 							<li><a href="https://github.com/kratisaxena" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 		    	<p class="member-name">Krati Saxena<br>
-		    		<span>[Web Development Head]</span></p>
+		    		<span>[Technical Department]</span></p>
 		    		</div>
 		    	</div>
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
@@ -215,7 +215,7 @@
 							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 						<p class="member-name">Riya Kathil<br>
-		    		<span>[Web Development Head]</span></p>
+		    		<span>[Technical Department]</span></p>
 		    		</div>
 		    	</div>
 		    	
@@ -228,7 +228,7 @@
 							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 						<p class="member-name">Arman Ahmed<br>
-		    		<span>[Web Development Head]</span></p>
+		    		<span>[Linux Department]</span></p>
 		    		</div>
 		    	</div>
 		    	
@@ -241,7 +241,7 @@
 							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 						<p class="member-name">Nikhil Khokhar<br>
-		    		<span>[Web Development Head]</span></p>
+		    		<span>[Technical Department]</span></p>
 		    		</div>
 		    	</div>
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
