--- a/team.html
+++ b/team.html
@@ -73,11 +73,11 @@
 		    	</div>
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 		    		<div class="team-member">
-		    			<center><img src="assets/images/team/shivbaran.jpg" class="img-responsive img-thumbnail"></center>
+		    			<center><img src="assets/images/team/itishri.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
 							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://touch.www.linkedin.com/?sessionid=4816177343758336&voyurl=https%3A%2F%2Fwww.linkedin.com%2Fm%2F%3Fsessionid%3D4816177343758336&rs=false&redirectUrl=%23stream#you" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/itishri123" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					<p class="member-name">Itishri Singh<br>
 		    		<span>[Web Development Head]</span></p>
@@ -118,8 +118,8 @@
 		    			<center><img src="assets/images/team/shivbaran.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
 							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/akash-tewari-6b0a018a" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="http://www.github.com/AkashBZ" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					<p class="member-name">Akash Tiwari<br>
 		    		<span>[Web Development Head]</span></p>
@@ -295,7 +295,7 @@
 		    	</div>
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 		    		<div class="team-member">
-		    			<center><img src="assets/images/team/shivbaran.jpg" class="img-responsive img-thumbnail"></center>
+		    			<center><img src="assets/images/team/sakshi.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
 							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://in.linkedin.com/in/sakshi-tripathi-953234102" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
