--- a/team.html
+++ b/team.html
@@ -91,7 +91,7 @@
 							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
-					<p class="member-name">Akash Tiwari<br>
+					<p class="member-name">Akash Tewari<br>
 		    		<span>[CTC]</span></p>
 		    		</div>
 		    	</div>
