--- a/team.html
+++ b/team.html
@@ -47,6 +47,18 @@
 		<div id="developers" class="container">
 			<!--<center><h3>Web Development</h3></center>-->
 		    <center><div class="row">
+		        <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+		    		<div class="team-member">
+		    			<center><img src="assets/images/team/manoj.jpg" class="img-responsive img-thumbnail"></center>
+			    		<ul class="icons">
+							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+						</ul>
+					<p class="member-name">Manoj Kumar<br>
+		    		<span>[Mentor]</span></p>
+		    		</div>
+		    	</div>
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 		    		<div class="team-member">
 		    			<center><img src="assets/images/team/saurabh.jpg" class="img-responsive img-thumbnail"></center>
@@ -122,7 +134,7 @@
 		    	
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 		    		<div class="team-member">
-		    			<center><img src="assets/images/team/monkey.jpg" class="img-responsive img-thumbnail"></center>
+		    			<center><img src="assets/images/team/mohit.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
 							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.linkedin.com/in/akash-tewari-6b0a018a" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -134,7 +146,7 @@
 		    	</div>
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 		    		<div class="team-member">
-		    			<center><img src="assets/images/team/monkey.jpg" class="img-responsive img-thumbnail"></center>
+		    			<center><img src="assets/images/team/riddhi.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
 							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -196,7 +208,7 @@
 		    	</div>
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 		    		<div class="team-member">
-		    			<center><img src="assets/images/team/monkey.jpg" class="img-responsive img-thumbnail"></center>
+		    			<center><img src="assets/images/team/shubham.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
 							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -208,7 +220,7 @@
 		    	</div>
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 		    		<div class="team-member">
-		    			<center><img src="assets/images/team/monkey.jpg" class="img-responsive img-thumbnail"></center>
+		    			<center><img src="assets/images/team/riya.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
 							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -234,7 +246,7 @@
 		    	
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 		    		<div class="team-member">
-		    			<center><img src="assets/images/team/monkey.jpg" class="img-responsive img-thumbnail"></center>
+		    			<center><img src="assets/images/team/khokhar.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
 							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
