modified:index page, contact form is created

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Microsoft Mobile Innovation Lab</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="assets/images/icon.jpg" type="image/gif" sizes="16x16">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/animate.css">
@@ -131,7 +132,8 @@
 </div>
  <section id="slides">
                  <header>
-				<center><h1>HOW WE DELIVER</h1></center>
+				<center><h1>GALLERY</h1></center>
+				<center><p>This is how we deliver</p></center>
 				</header>
 	<!-- slider -->
 	<div class="slider">
@@ -167,6 +169,41 @@
 	</div>
 	<!-- //slider -->
 </section>
+<!--Contact-->
+<!-- Contact start-->
+<!-- <div class="contact" id="contact">
+     <h1>GET IN TOUCH</h1>
+	<div class="container">
+
+		<div class="row contact-row">
+			<div class="col-md-6 contact-row-left">
+				<h3>Contact us </h3>
+				<p>Thank you for your interest in JSS Mobile Innovation Labs. We are in a process of continuous improvement and growth. You can share your valuable feedback and help us evolve :) </p>
+				<br>
+				<p class="add-mark"><span><img src="assets/images/ad-sy.png" /></span>C-20/1 JSS Academy of Technical Education, Noida</p>
+				<p class="cel-mark"><span><img src="assets/images/cel-sy.png" /></span>+91-9990506367 / +91-8882992836</p>
+				<p class="ema-mark"><span><img src="assets/images/ema-sy.png" /></span><a href="mailto:example@mail.com">jssnokia@gmail.com</a></p>
+			</div>
+			<div class="col-md-6 contact-row-right">
+				<form action="phpmail/welcome.php" method="post">
+					<div class="form-row1">
+					<input type="text" placeholder="Type Your Name" required="" name="subject"/>
+					<input type="text" placeholder="Type Your Email" required="" name="email"/>
+					</div>
+					<br>	
+					<textarea placeholder="Type Your Message" required="" name="message"></textarea>
+				<div class="form-row3">
+					<input type="reset"/><input type="submit" />
+				</div>
+				</form>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+</div> -->
+
+<!-- Contact End-->
+<!--//Contact-->
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons wow shake">
