--- a/events.html
+++ b/events.html
@@ -4,6 +4,7 @@
 		<title>Microsoft Mobile Innovation Lab</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="assets/images/icon.jpg" type="image/gif" sizes="16x16">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" type="text/css" href="assets/css/animate.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
