Added pic of sumit and ayushi

--- a/team.html
+++ b/team.html
@@ -319,13 +319,13 @@
 		    	</div>
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 		    		<div class="team-member wow fadeIn">
-		    			<center><img src="assets/images/team/monkey.jpg" class="img-responsive img-thumbnail"></center>
+		    			<center><img src="assets/images/team/sumit.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
 							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
-						<p class="member-name">Sumit<br>
+						<p class="member-name">Sumit Pundir<br>
 		    		<span>[Developer]</span></p>
 		    		</div>
 		    		</div>
@@ -355,7 +355,7 @@
 		    	</div>
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 		    		<div class="team-member wow fadeIn">
-		    			<center><img src="assets/images/team/monkey.jpg" class="img-responsive img-thumbnail"></center>
+		    			<center><img src="assets/images/team/ayushi.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
 							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://in.linkedin.com/in/ayushi-rathore-23876856" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
