--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 							<h2>WHAT WE DO</h2>
 							<!--<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>-->
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>We think that what is being done is not the best solution, nor is not what we would have done ourselves under the circumstances, but fundamentally we agree.</p>
 						<ul class="actions">
 							<!-- <li><a href="#" class="button">Learn More</a></li> -->
 						</ul>
